# dify-plugin-zeabur-ai-hub

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
models/llm/: _position.yaml  claude-haiku-4-5.yaml  claude-sonnet-4-5.yaml  deepseek-chat.yaml  deepseek-v3.2-exp.yaml  deepseek-v3.2.yaml  gemini-2.5-flash-image.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gemini-3-flash-preview.yaml  gemini-3-pro-image-preview.yaml  gemini-3-pro-preview.yaml  glm-4.6.yaml  glm-4.7-flash.yaml  glm-4.7.yaml  gpt-4.1-mini.yaml  gpt-4.1.yaml  gpt-4o-mini.yaml  gpt-4o.yaml  gpt-5-mini.yaml  gpt-5-nano.yaml  gpt-5.1.yaml  gpt-5.2.yaml  gpt-5.yaml  gpt-oss-120b.yaml  grok-4-fast-non-reasoning.yaml  kimi-2.5.yaml  kimi-k2-thinking.yaml  llama-3.3-70b.yaml  llm.py  qwen-3-32.yaml  qwen3-32b.yaml  qwen3-next.yaml
provider/: zeabur_ai_hub.py  zeabur_ai_hub.yaml
