[project]
name = "zeabur-ai-hub"
version = "0.0.1"
description = "Zeabur AI Hub plugin for Dify - Access Claude, Gemini, GPT, DeepSeek and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin>=0.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
